--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,10 +1,4 @@
 {
-  "recommendations": [
-    "octref.vetur"
-  ],
-  "unwantedRecommendations": [
-    "hookyqr.beautify",
-    "dbaeumer.jshint",
-    "ms-vscode.vscode-typescript-tslint-plugin"
-  ]
+  "recommendations": ["octref.vetur"],
+  "unwantedRecommendations": ["hookyqr.beautify", "dbaeumer.jshint"]
 }
